--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,19 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.31'
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0-M1"
+    }
 }
 
-group 'org.example'
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.5.0-M1'
+}
+
+group 'cn.taskeren.brigadierx'
 version '1.0-SNAPSHOT'
 
 repositories {
