--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,13 @@ language: java
 install: skip
 
 jdk:
-  - oraclejdk8
   - oraclejdk12
   - openjdk8
   - openjdk12
+
+# Fix permission errors
+before_install:
+  - chmod +x gradlew
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
